Attempt to fix R10 Heroku error
Based on https://blog.codecentric.de/en/2019/08/spring-boot-heroku-docker-jdk11/